<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"



    >

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/logo_prototype"
            android:title="@string/menu_home_pizzas_menu" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/book"
            android:title="@string/menu_bookmarks" />

        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/user"
            android:title="@string/menu_admin" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/whatsapp"
            android:title="@string/menu_contactos" />
    </group>
</menu>