<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderPizza.Activities.RecipeModification"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Reciple_Title"
                android:textSize="20sp"
                android:textColor="@color/background_2"
                android:gravity="center"
                android:layout_marginStart="10sp"
                />

            <EditText

                android:id="@+id/et_recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/recipe_item"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:hint="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/background_2"
                android:textColorHint="@color/background_2"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/NoPersonas"
                android:textSize="20sp"
                android:textColor="@color/background_2"
                android:gravity="center"
                android:layout_marginStart="10sp"
                />

            <EditText

                android:id="@+id/et_nopersonas"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/recipe_item"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:hint="##"
                android:textAlignment="center"
                android:textColor="@color/background_2"
                android:textColorHint="@color/background_2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Tiempo_Receta"
                android:textSize="20sp"
                android:textColor="@color/background_2"
                android:gravity="center"
                android:layout_marginStart="10sp"
                />

            <EditText

                android:id="@+id/et_tiempo"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/recipe_item"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:hint="##"
                android:textAlignment="center"
                android:textColor="@color/background_2"
                android:textColorHint="@color/background_2"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/Insert_Descripcion"
            android:textColor="@color/background_2"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/et_descripion"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/recipe_item"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/Insert_Descripcion"
            android:textAlignment="center"
            android:textColor="@color/background_2"
            android:textColorHint="@color/background_2"
            android:textSize="20sp"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/img_ref"
                android:textColor="@color/background_2"
                android:textSize="20sp"
                android:textAlignment="center"

                />

            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/et_imgref"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:padding="1dp"
                android:background="@drawable/recipe_item"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:hint="@string/Insert_Descripcion"
                android:textAlignment="center"
                android:textColor="@color/background_2"
                android:textColorHint="@color/background_2"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Modificar:"
            android:textAlignment="center"
            android:textColor="@color/background_2"
            android:textSize="20sp"
            android:padding="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_ingredintes_mod"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape"
                android:text="@string/Ingredientes"
                android:textColor="@color/background_2"
                android:textSize="20sp"
                android:padding="10sp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/tv_pasos_mod"
                android:layout_marginStart="20sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape"
                android:text="@string/Insert_Pasos"
                android:textColor="@color/background_2"
                android:textSize="20sp"
                android:padding="10sp"
                android:textAlignment="center"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/save_update"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape"
                android:text="@string/Guardar"
                android:textColor="@color/background_2"
                android:textSize="20sp"
                android:padding="10sp"
                android:textAlignment="center"
                />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>