<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".OrderPizza.Activities.PasosIngredientesMod">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_pasos_ingredientes_mod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/Insert_Pasos"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/background_2"
            />

        <LinearLayout
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText

            android:id="@+id/et_btnAgregar"
            android:layout_width="260dp"
            android:layout_height="60sp"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20sp"
            android:background="@drawable/recipe_item"
            android:hint="@string/app_name"
            android:textColor="@color/background_2"
            android:textColorHint="@color/background_2"

        />

        <TextView
            android:id="@+id/tv_btnAgregar"
            android:layout_marginStart="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_shape"
            android:padding="10sp"
            android:text="@string/Agregar"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/background_2"
            />


        </LinearLayout>

        <ListView
            android:id="@+id/lv_ingredientes_pasos"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/background_2"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_shape"
                android:padding="10sp"
                android:text="@string/Guardar"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/background_2"/>



        </LinearLayout>


    </LinearLayout>

</RelativeLayout>