<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".OrderPizza.Activities.RecipeDisplay">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".OrderPizza.Activities.RecipeDisplay">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/Reciple_Title"
                    android:textAlignment="center"
                    android:textSize="30sp"

                    />

                <TextView
                    android:id="@+id/tv_noPersonas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NoPersonas"
                    android:textAlignment="center"
                    android:textSize="23sp"

                    />


                <LinearLayout
                    android:id="@+id/presentacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/timer"

                        />

                    <TextView
                        android:id="@+id/tiempo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp"
                        android:text="@string/Tiempo_Receta"
                        android:textAlignment="center"
                        android:textSize="17sp"

                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20sp"
                    android:id="@+id/ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25sp"
                        android:layout_marginTop="40sp"
                        android:layout_marginBottom="20sp"
                        android:text="@string/Ingredientes"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20sp"
                    android:id="@+id/pasos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25sp"
                        android:layout_marginTop="40sp"
                        android:layout_marginBottom="20sp"
                        android:text="@string/Pasos"
                        android:textSize="20sp" />

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>